--- a/7.2/hooks/build
+++ b/7.2/hooks/build
@@ -1,2 +1,2 @@
 #!/bin/bash
-docker build -f $DOCKERFILE_PATH -t $IMAGE_NAME:$DOCKER_TAG . --squash
+docker build -f $DOCKERFILE_PATH -t $IMAGE_NAME . --squash
