--- a/7.2/docker-compose.test.yml
+++ b/7.2/docker-compose.test.yml
@@ -3,8 +3,8 @@ version: '3'
 
 services:
   sut:
-    image: REPLACE_IMAGENAME
-    # image: ubuntu-apache2-php7:7.2
+    # image: REPLACE_IMAGENAME
+    image: ubuntu-apache2-php7:7.2
     ports:
       - 8080:80
     volumes:
