--- a/7.1/docker-compose.test.yml
+++ b/7.1/docker-compose.test.yml
@@ -4,8 +4,11 @@ version: '3'
 services:
   sut:
     image: REPLACE_IMAGENAME
-    # image: ubuntu-apache2-php7:7.1
-    ports:
-      - 8080:80
+    # image: ubuntu-apache2-php7:7.2
     volumes:
       - ../test/code:/var/www/html
+  sutc:
+    image: REPLACE_IMAGENAME
+    # image: ubuntu-apache2-php7:7.2
+    volumes:
+      - ../test/code-with-composer:/var/www/html
