--- a/7.1/docker-compose.test.yml
+++ b/7.1/docker-compose.test.yml
@@ -12,3 +12,4 @@ services:
     # image: ubuntu-apache2-php7:7.2
     volumes:
       - ../test/code-with-composer:/var/www/html
+      - ../test/code-with-composer/mobingi-init.sh:/tmp/init/init.sh
